refactor: converted some legacy use to components